# PDFManager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/hyntix/android/pdfmanager/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bitmap_ops.cpp
app/src/main/java/com/hyntix/android/pdfmanager/: MainActivity.kt  PdfViewerApp.kt  PdfiumTester.kt
app/src/main/java/com/hyntix/android/pdfmanager/data/db/: AppDatabase.kt  CachedPdfFileDao.kt  FavoriteFileDao.kt  FolderDao.kt  FolderPdfCrossRefDao.kt  RecentFileDao.kt
app/src/main/java/com/hyntix/android/pdfmanager/data/model/: CachedPdfFile.kt  FavoriteFile.kt  Folder.kt  FolderPdfCrossRef.kt  PdfFile.kt  RecentFile.kt
app/src/main/java/com/hyntix/android/pdfmanager/data/repository/: DuplicateRepository.kt  FileRepository.kt  FolderRepository.kt  (+1 more)
app/src/main/java/com/hyntix/android/pdfmanager/native/: BitmapOps.kt  NativeScanner.kt
app/src/main/java/com/hyntix/android/pdfmanager/preload/: PdfPreloadManager.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
app/src/test/java/com/hyntix/android/pdfmanager/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: build_android.sh
rust/pdf_scanner/: Cargo.toml
rust/pdf_scanner/src/: lib.rs
(+22 files in other folders)
